Minor changes in appearance
Color change of box outlines. Font weight change from light to medium
for paragraphs.

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 <section id="pflastersteine">
 	<div class="container">
 		<div class="row">
+			<h2>pflastersteine</h2>
 			<!-- Flexslider -->
 			<div class="controls col-1"></div>
 			<div class="flexslider col-11">
@@ -140,19 +141,21 @@
 			      <img src="images/pflastersteine_zickzack.jpg"/>
 			    </li>
 			    <li>
-			      <img src="slide2.jpg"/>
+			      <img src="images/pflastersteine_zickzack.jpg"/>
 			    </li>
 			    <li>
-			      <img src="slide3.jpg"/>
+			      <img src="images/pflastersteine_zickzack.jpg"/>
 			    </li>
 			    <li>
-			      <img src="slide4.jpg"/>
+			      <img src="images/pflastersteine_zickzack.jpg"/>
 			    </li>
 			  </ul>
-			  <div>
-				<h4>ZickZack</h4>
-				<p>sadasdasdasdasddsdasdasdasdasdasds</p>
-			</div>
+			  <ul class="description col-5">
+						<li>
+							<h4>ZickZack</h4>
+							<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+						</li>
+				</ul>
 			</div>
 			<!-- Ende Flexslider -->
 		</div>
